hphp/hack/test/typecheck/enum_class_label/enum_class_wrong_place.php.exp
ERROR: File "enum_class_wrong_place.php", line 3, characters 1-17:
Hack does not support top level statements. Use the `__EntryPoint` attribute on a function instead (Naming[2128])
